z-index of nav bar fixed to be always-on-top; New tweet button on nav bar added; form now toggles upon it with a hidden start. Compass W4D3: From Toggle is met. + minor bugs on the fly.

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -3,6 +3,7 @@ nav {
   position: fixed;
   display: flex;
   justify-content: space-between;
+  align-items: flex-start;
   height: 120px;
   width: 100%;
   z-index: 99;
@@ -10,20 +11,29 @@ nav {
   color: #FFFFFF ;
   padding: 1.5em;
   font-size: 1em;
+  
 }
 nav > span {
   font-family: 'Bungee', "sans serif";
 }
 
 nav > button {
-  font-size: 0.3em;
+  position: top;
   background-color: inherit;
   color: inherit;
   font: inherit;
+  font-size: 16px;
   border: transparent;
+  /* margin: 7px; */
+  outline: none;
+  cursor: pointer;
+  /* padding: 15px; */
+  /* display: flex; */
+
+  
 }
 
-nav > button > footer {
+nav > button:hover > footer {
   align-self: flex-end;
   animation-duration: 1s;
   animation-iteration-count: infinite;
